--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
-    <title>React App</title>
+
+
+<!-- google fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@600&family=Nosifer&display=swap" rel="stylesheet">
+    <title>ZedFlix - Movie App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
